[workspace]
resolver = "2"
members = ["ekf2-sys", "ekf2"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rechenmaschine/ekf2-rs"
authors = ["Louis Schell"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
