[workspace]
members = ["ekf2-sys", "ekf2"]
resolver = "2"

[workspace.package]
authors = ["Louis Schell"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rechenmaschine/ekf2-rs"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
